@@ -349,19 +349,26 @@ SEXP csc_getDiag(SEXP x)
 
 SEXP csc_transpose(SEXP x)
 {
-    SEXP ans = PROTECT(NEW_OBJECT(MAKE_CLASS("dgCMatrix"))),
-	islot = GET_SLOT(x, Matrix_iSym);
-    int *adims,	*xdims = INTEGER(GET_SLOT(x, Matrix_DimSym)),
-	nnz = length(islot);
+    SEXP xi = GET_SLOT(x, Matrix_iSym);
+    SEXP ans = PROTECT(NEW_OBJECT(MAKE_CLASS("dgCMatrix")));
+    int *adims = INTEGER(ALLOC_SLOT(ans, Matrix_DimSym, INTSXP, 2)),
+	*xdims = INTEGER(GET_SLOT(x, Matrix_DimSym)),
+	nz = length(xi);
+    int *xj = Calloc(nz, int);
+    SEXP adn = ALLOC_SLOT(ans, Matrix_DimNamesSym, VECSXP, 2),
+	xdn = GET_SLOT(x, Matrix_DimNamesSym);
 
-    adims = INTEGER(ALLOC_SLOT(ans, Matrix_DimSym, INTSXP, 2));
     adims[0] = xdims[1]; adims[1] = xdims[0];
-    csc_compTr(xdims[0], xdims[1], nnz,
-	       INTEGER(GET_SLOT(x, Matrix_pSym)), INTEGER(islot),
-	       REAL(GET_SLOT(x, Matrix_xSym)),
-	       INTEGER(ALLOC_SLOT(ans, Matrix_pSym, INTSXP, xdims[0] + 1)),
-	       INTEGER(ALLOC_SLOT(ans, Matrix_iSym, INTSXP, nnz)),
-	       REAL(ALLOC_SLOT(ans, Matrix_xSym, REALSXP, nnz)));
+    SET_VECTOR_ELT(adn, 0, VECTOR_ELT(xdn, 1));
+    SET_VECTOR_ELT(adn, 1, VECTOR_ELT(xdn, 0));
+    triplet_to_col(adims[0], adims[1], nz, 
+		   expand_cmprPt(xdims[1], INTEGER(GET_SLOT(x, Matrix_pSym)), xj),
+		   INTEGER(xi), 
+		   REAL(GET_SLOT(x, Matrix_xSym)),
+		   INTEGER(ALLOC_SLOT(ans, Matrix_pSym, INTSXP, adims[1] + 1)),
+		   INTEGER(ALLOC_SLOT(ans, Matrix_iSym, INTSXP, nz)),
+		   REAL(ALLOC_SLOT(ans, Matrix_xSym, REALSXP, nz)));
+    Free(xj);
     UNPROTECT(1);
     return ans;
 }
